--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "$version_kotlin"
+    id "org.jetbrains.kotlin.jvm" version "$kotlin_version"
     id "java"
     id "application"
     id "org.hidetake.swagger.generator" version "2.18.2"
 }
 
-sourceCompatibility = version_java
-compileKotlin { kotlinOptions.jvmTarget = version_java }
-compileTestKotlin { kotlinOptions.jvmTarget = version_java }
+sourceCompatibility = java_version
+compileKotlin { kotlinOptions.jvmTarget = java_version }
+compileTestKotlin { kotlinOptions.jvmTarget = java_version }
 
 group 'org.junyan.kotlin'
 version '1.0-SNAPSHOT'
@@ -19,8 +19,9 @@ repositories {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:${version_kotlin}"
-    implementation "io.ktor:ktor-server-netty:1.3.2"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:${kotlin_version}"
+    implementation "io.ktor:ktor-server-netty:${ktor_version}"
+    implementation "io.ktor:ktor-locations:${ktor_version}"
     implementation "ch.qos.logback:logback-classic:1.2.3"
 
     swaggerCodegen 'io.swagger.codegen.v3:swagger-codegen-cli:3.0.20'
@@ -53,10 +54,10 @@ swaggerSources {
     openapi {
         inputFile = file('openapi/openapi.yaml')
         code {
-            language = 'kotlin-server'
-            configFile = file('openapi/kotlin-server-codegen-config.json')
+            language = 'Java'
+            //configFile = file('openapi/kotlin-server-codegen-config.json')
             templateDir = file('openapi/templates')
-            components = ['models','apis','supportingFiles']
+            components = ['models','apis','supportingFiles'] // 'supportingFiles'
         }
     }
 }
